# SDL2_FFMPEG-Player

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: codec_object.h  error.h  ffmpeg_object.h  ffmpeg_player.h  log.h  queue.h
src/: codec_object.c  ffmpeg_object.c  queue.c  sdl_player.c
